// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.api.v0;

import "com/digitalasset/canton/domain/api/v0/service_agreement.proto";

service DomainService {
  option deprecated = true;
  rpc GetServiceAgreement(GetServiceAgreementRequest) returns (GetServiceAgreementResponse);
}
