// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.domain.api.v0;

import "com/digitalasset/canton/protocol/v0/sequencing.proto";

message GetServiceAgreementRequest {}

message GetServiceAgreementResponse {
  com.digitalasset.canton.protocol.v0.ServiceAgreement agreement = 1; // Optional, present if the domain requires a service agreement
}
